--- a/dec1/.vscode/settings.json
+++ b/dec1/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\ivan_\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\ivan_\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
+    "test":"test"
 }
